# spaceshooter

./: CMakeLists.txt  LICENSE  README.md
include/: Bullet.hpp  Config.hpp  Enemies.hpp  Maps.hpp  Player.hpp  Projectiles.hpp  SpaceShooter.hpp  Spaceshooter.hpp
include/components/: ButtonKeyboardComponent.hpp  DeleteoffScreenComponent.hpp  DiscComponent.hpp  EnemyShootComponent.hpp  FPSDisplay.hpp  GameEndComponent.hpp  GiveScoreComponent.hpp  HealthBarComponent.hpp  HealthComponent.hpp  LootBehaviorComponent.hpp  LootComponent.hpp  ObjectQueueComponent.hpp  PlayerInputComponent.hpp  PlayerMovementComponent.hpp  PlayerShootingComponent.hpp  ProjectileComponent.hpp  QuitOnEscapeComponent.hpp  ScoreComponent.hpp  ScoreDisplayComponent.hpp
include/enemies/: Astroid.hpp  Disc.hpp  Dummy.hpp  Enemy.hpp  Probe.hpp
include/factories/: Enemies.hpp  Maps.hpp  Menus.hpp  PowerUps.hpp  Projectiles.hpp
include/maps/: AstroidField.hpp  Map.hpp
include/menus/: MainMenu.hpp
include/player/: HealthBar.hpp  Player.hpp  Score.hpp  ScoreBar.hpp
include/powerups/: HealthPack.hpp  Powerup.hpp
include/projectiles/: Bullet.hpp
src/: Bullet.cpp  Enemies.cpp  Maps.cpp  Player.cpp  Projectiles.cpp  SpaceShooter.cpp  Spaceshooter.cpp  main.cpp
src/components/: ButtonKeyboardComponent.cpp  DeleteoffScreenComponent.cpp  DiscComponent.cpp  EnemyShootComponent.cpp  FPSDisplay.cpp  GameEndComponent.cpp  GiveScoreComponent.cpp  HealthBarComponent.cpp  HealthComponent.cpp  LootBehaviorComponent.cpp  LootComponent.cpp  ObjectQueueComponent.cpp  PlayerInputComponent.cpp  PlayerMovementComponent .cpp  PlayerShootingComponent.cpp  ProjectileComponent.cpp  QuitOnEscapeComponent.cpp  ScoreComponent.cpp  ScoreDisplayComponent.cpp
src/enemies/: Astroid.cpp  Disc.cpp  Dummy.cpp  Enemy.cpp  Probe.cpp
src/factories/: Enemies.cpp  Maps.cpp  Menus.cpp  Player.cpp  PowerUps.cpp  Projectiles.cpp
tools/: generate_embedded_assets.sh
(+17 files in other folders)
